test/Runner/errors/tests/MI/TestSuite/Init.ts.js
eve("Suite", () => {
	suite("Any", () => {
		throw new Error();
	})
});